# JAI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/jai_api/: __init__.py  fleet.py  main.py
apps/console/: package.json  pnpm-lock.yaml
apps/console/src/app/: globals.css  layout.tsx  page.tsx
apps/console/src/app/approvals/: page.tsx
apps/console/src/app/approvals/_components/: GateCard.tsx  types.ts
apps/console/src/app/chat/: page.tsx
apps/console/src/app/chat/_components/: Composer.tsx  ExamplePrompts.tsx  MessageBubble.tsx  PersonaBar.tsx  personas.ts
apps/console/src/app/network/: page.tsx
apps/console/src/app/network/_components/: FleetGraph.tsx  HopsTicker.tsx  Legend.tsx  NodeDetail.tsx  layout.ts  resolve.ts
apps/console/src/app/orchestrate/: page.tsx
apps/console/src/app/orchestrate/_components/: FanoutDiagram.tsx  HopCard.tsx  MissionForm.tsx  MissionIdle.tsx  MissionOutcome.tsx  MissionTimeline.tsx  agents.ts  demo.ts  useMission.ts
apps/console/src/app/runs/: page.tsx
apps/console/src/app/runs/_components/: ChainShield.tsx  EventTimeline.tsx  RunList.tsx  auditApi.ts
apps/console/src/app/telemetry/: page.tsx
apps/console/src/app/telemetry/_components/: AnimatedNumber.tsx  BarChart.tsx  LiveStrip.tsx  TokenFlow.tsx  costFetch.ts  format.ts  referenceCosts.ts
apps/console/src/components/: JourneyBar.tsx  Nav.tsx  TelemetryStrip.tsx
apps/console/src/components/ui/: AutonomyMeter.tsx  Chip.tsx  EmptyState.tsx  GaugeRing.tsx  LiveDot.tsx  Panel.tsx  Pill.tsx  SectionHeader.tsx  Sparkline.tsx  Spinner.tsx  Stat.tsx  SystemBadge.tsx  index.ts
apps/console/src/lib/: api.ts  fleet.ts  theme.ts
docs/: VISION.md
docs/adr/: ADR-001-protocols-over-frameworks.md  ADR-002-modular-monolith.md  ADR-003-single-postgres.md  ADR-004-checkpointing-not-temporal.md
docs/strategy/: agentic-procurement-landscape.md  build-vs-buy-framework.md  llm-vendor-negotiation-playbook.md
evals/: run_suite3.py
evals/results/: suite3.scorecard.json
evals/suite3_network/: scenarios.yaml
infra/litellm/: config.yaml
infra/postgres/init/: 01-init.sql
parts/agents/intake_triage/: manifest.yaml
parts/agents/intake_triage/prompts/: triage.md
parts/agents/orchestrator/: manifest.yaml
parts/agents/orchestrator/prompts/: orchestrator.md
parts/agents/risk_sentinel/: manifest.yaml
parts/agents/risk_sentinel/prompts/: risk.md
parts/agents/spend_analyst/: manifest.yaml
parts/agents/spend_analyst/prompts/: spend.md
parts/blackbox/: pyproject.toml
parts/blackbox/src/jai_blackbox/: __init__.py
parts/dyno/: pyproject.toml
parts/dyno/src/jai_dyno/: __init__.py
parts/engine/: pyproject.toml
parts/engine/demo/: demo_3.py
parts/engine/src/jai_engine/: __init__.py  orchestrate.py
parts/engine/tests/: test_orchestrate.py
parts/foundry/: pyproject.toml
parts/foundry/src/jai_foundry/: __init__.py
parts/gateway/: pyproject.toml
parts/gateway/src/jai_gateway/: __init__.py
parts/manifest/: README.md  pyproject.toml
parts/manifest/src/jai_manifest/: __init__.py  cli.py  events.py  manifest.py
parts/manifest/tests/: test_manifest.py
parts/mesh/: README.md  pyproject.toml
parts/mesh/demo/: demo.py
parts/mesh/src/jai_mesh/: __init__.py  mesh.py
parts/mesh/tests/: test_mesh.py
parts/meter/: pyproject.toml
parts/meter/src/jai_meter/: __init__.py
parts/registry/: README.md  pyproject.toml
parts/registry/demo/: demo.py
parts/registry/src/jai_registry/: __init__.py  cli.py  store.py
parts/registry/tests/: test_registry.py
schemas/: agent-manifest.schema.json  audit-event.schema.json  run-context.schema.json
