[project]
name = "jai-api"
version = "0.1.0"
description = "JAI control plane — FastAPI app exposing runs, costs, approvals, and registry to the console"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "jai-gateway",
    "jai-cortex",
    "jai-engine",
    "jai-brakes",
    "jai-blackbox",
    "jai-meter",
    "jai-governor",
    "jai-mcp",
    "jai-mesh",
    "jai-registry",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "psycopg[binary]>=3.2",
]

[project.scripts]
jai-api = "jai_api.main:serve"

[tool.uv.sources]
jai-manifest = { workspace = true }
jai-gateway = { workspace = true }
jai-cortex = { workspace = true }
jai-engine = { workspace = true }
jai-brakes = { workspace = true }
jai-blackbox = { workspace = true }
jai-meter = { workspace = true }
jai-governor = { workspace = true }
jai-mcp = { workspace = true }
jai-mesh = { workspace = true }
jai-registry = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_api"]
