[project]
name = "jai-blackbox"
version = "0.1.0"
description = "jai-blackbox — the flight recorder: hash-chained, append-only, tamper-evident audit trail"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "psycopg[binary]>=3.2",
]

[project.scripts]
jai-blackbox = "jai_blackbox.cli:main"

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_blackbox"]
