[project]
name = "jai-dyno"
version = "0.1.0"
description = "jai-dyno — the test bench: eval harness, graders, scorecards, and autonomy promotion gates"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "jai-gateway",
    "pyyaml>=6",
]

[project.scripts]
jai-dyno = "jai_dyno.cli:main"

[tool.uv.sources]
jai-manifest = { workspace = true }
jai-gateway = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_dyno"]
