[project]
name = "jai-foundry"
version = "0.1.0"
description = "jai-foundry — the parts foundry: deterministic synthetic procurement data (Borealis Manufacturing)"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "psycopg[binary]>=3.2",
    "pyyaml>=6",
]

[project.scripts]
jai-foundry = "jai_foundry.cli:main"

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_foundry"]
