[project]
name = "jai-gateway"
version = "0.1.0"
description = "jai-gateway — the fuel system: multi-model routing client with budgets, metering tags, and keyless mock mode"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "openai>=1.60",
    "httpx>=0.27",
]

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_gateway"]
