[project]
name = "jai-manifest"
version = "0.1.0"
description = "jai-manifest — the part drawing: declarative agent spec, run context, and audit event contracts"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6",
]

[project.scripts]
jai-manifest = "jai_manifest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_manifest"]
