[project]
name = "jai-mesh"
version = "0.1.0"
description = "jai-mesh — the CAN bus: A2A agent cards + context-propagating dispatch between agents"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "httpx>=0.27",
]

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_mesh"]
