[project]
name = "jai-meter"
version = "0.1.0"
description = "jai-meter — the odometer: per-action cost ledger (tenant / agent / run / task) enabling any future pricing model"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "psycopg[binary]>=3.2",
]

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_meter"]
