[project]
name = "jai-registry"
version = "0.1.0"
description = "jai-registry — the fleet roster: every agent's card, autonomy level, live status, and latest scorecard"
requires-python = ">=3.12"
dependencies = [
    "jai-manifest",
    "psycopg[binary]>=3.2",
    "pyyaml>=6",
]

[project.scripts]
jai-registry = "jai_registry.cli:main"

[tool.uv.sources]
jai-manifest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jai_registry"]
